# rusty-tusks

./: Cargo.toml  Dockerfile  Makefile  README.md
charts/rusty-tusks-operator/: Chart.yaml  rusty-tusks-operator-values.yaml  values.yaml
charts/rusty-tusks-operator/templates/: NOTES.txt  _helpers.tpl  cluster-role-binding.yaml  cluster-role.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/rusty-tusks-operator/templates/tests/: test-connection.yaml
resources/: argo-ci-workflow.yaml  collins.yaml  rusty-tusks-clusterrole.yaml  rusty-tusks-clusterrolebinding.yaml  rusty-tusks-operator-values.yaml  rusty-tusks-sa.yaml
src/: controller.rs  lib.rs  main.rs
src/models/: pod.rs  state.rs
