[package]
name = "rusty-tusks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# TODO: Can probably split these out...
default = ["krator-derive", "serde_yaml"]
derive = ["krator-derive", "serde_yaml"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.8", optional = true }
structopt = "0.3"

krator = "0.6.0"
krator-derive = { version = "0.5", optional = true }

# These are `kube` versions which match the dep tree that
# `krator` includes
kube = { version = "0.64", default-features = false, features = ["derive"] }
kube-derive = { version = "0.64" }

schemars = "0.8"
async-trait = "0.1"
tokio = { version = "1.0", features = ["fs", "macros", "signal", "rt-multi-thread"] }
anyhow = "1.0"
rand = "0.8"

# Unfortunately these are baked into `Krator` and are needed to get logging
tracing = { version = "0.1", features = ['log'] }
opentelemetry-jaeger = "0.11"
tracing-opentelemetry = "0.11"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"

[dependencies.k8s-openapi]
version = "0.13"
features = ["v1_22"]

[dev-dependencies]
kube-derive = "0.71"
serde_yaml = "0.8"

[[bin]]
name = "walrus"
required-features = ["derive"]
path = "src/main.rs"
